fix: dash table arrows align

--- a/dashboard/assets/style.css
+++ b/dashboard/assets/style.css
@@ -107,3 +107,9 @@ a:hover {
 a:visited {
     color: var(--color-5);
 }
+
+.dash-table-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
